--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
             <img id="pixarLogo" src=".//images/Pixar.gif">
         </div>
         <div class="texto">
-            <P>
+            <p>
                 Esse é um quiz de 10 perguntas elaborado por estudantes do primeiro semestre de Ciência da Computação. Nele abordamos o tema Disney PIXAR, onde 
                 o jogador testará seus conhecimentos nas melhores animações do planeta. 
-            </P>
-            <h2>Desfrute da melhor experiência que você terá com um quiz em toda sua vida! </h2>
+            </p>
         </div>
-        <div onclick="proxima()" id="botao">
-            <button >Jogar!</button>
+        <div class="botoes">
+            <div onclick="proxima()" class="botao">
+                <button >Jogar!</button>
+            </div>
+            <div id="instrucoes" class="botao">
+                <a href="./paginas/instrucoes.html"><button >Instruções</button></a>
+            </div>
+            <div id="creditos" class="botao">
+                <a href="./paginas/creditos.html"><button >Créditos</button></a>
+            </div>
         </div>
     </div>
    <div class="perguntas" id="p1">
