--- a/paginas/creditos.html
+++ b/paginas/creditos.html
@@ -14,7 +14,7 @@
             <img id="pixarLogo" src="..//images/Pixar.gif">
         </div>
         <div id="creditos" class="texto">
-            <p>Esse quiz foi realizado pelos seguintes alunos do primeiro semenstre de Ciencia da computação:</p>
+            <p>Esse quiz foi realizado pelos seguintes alunos do primeiro semenstre de Ciência da computação:</p>
             <a href="https://github.com/henriquemcmedeiros" target="_blank"><p>Henrique Marques de Carvalho Medeiros</p></a>
             <a href="https://github.com/PadreGascoigne" target="_blank"><p>Guilherme Silva Dias</p></a>
             <a href="https://github.com/Lucasayme01" target="_blank"><p>Lucas Ayme de Souza</p></a>
