--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>Quiz - Disney PIXAR</title>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -16,7 +18,7 @@
         </div>
         <div class="texto">
             <p>
-                Esse é um quiz de 10 perguntas elaborado por estudantes do primeiro semestre de Ciência da Computação. Nele abordamos o tema Disney PIXAR, onde 
+                Esse é um quiz de 10 perguntas elaborado por estudantes do primeiro semestre de Ciência da Computação. Nele abordamos o tema <a href="./paginas/história.html">Disney PIXAR</a>, onde 
                 o jogador testará seus conhecimentos nas melhores animações do planeta. 
             </p>
         </div>
@@ -37,6 +39,9 @@
             <h3>Pergunta 01</h3>
             <img class="menorh" src="./images/incriveisp1.jpg">
             <h4>Qual o nome vilão principal do filme Os Incríveis lançado em 2005?</h4>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
         </div>
         <div class="alternativas" id="p1-alternativas">
             <button id="p1a" onclick="perguntas('1', 'c', 'a')" class="errado">
@@ -74,6 +79,9 @@
         <h3>Pergunta 02</h3>
         <img src="./images/enroladosp2.jfif">
         <h4>A animação Enrolados (2010) é baseada em qual outra obra da Disney?</h4>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
     </div>
     <div class="alternativas" id="p2-alternativas">
         <button id="p2a" onclick="perguntas('2', 'b', 'a')" class="errado">
@@ -111,6 +119,9 @@
         <h3>Pergunta 03</h3>
         <img class="menorh" src="./images/7.-toy-story-2.jpeg">
         <h4>Em uma cena de Toy Story 2, Buzz e Zurg protagonizam uma cena no elevador que faz referência a uma saga de filmes de muito sucesso. Qual saga é essa?</h4>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
     </div>
     <div class="alternativas" id="p3-alternativas">
         <button id="p3a" onclick="perguntas('3', 'b', 'a')" class="errado">
@@ -148,6 +159,9 @@
         <h3>Pergunta 04</h3>
         <img src="./images/monsterincp4.jfif">
         <h4>Em Monstros SA, Mike e Sully são banidos e vão parar no mundo humano. Em qual lugar eles foram parar?</h4>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
     </div>
     <div class="alternativas" id="p4-alternativas">
         <button id="p4a" onclick="perguntas('4', 'a', 'a')" class="certo">
@@ -185,6 +199,9 @@
         <h3>Pergunta 05</h3>
         <img src="./images/opbigherop5.jfif">
         <h4>Qual o nome do robô ajudante em Operação Big Hero?</h4>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
     </div>
     <div class="alternativas" id="p5-alternativas">
         <button id="p5a" onclick="perguntas('5', 'a', 'a')" class="certo">
@@ -222,6 +239,9 @@
         <h3>Pergunta 06</h3>
         <img src="./images/rs_1024x576-150929062416-1024.inside-out-anderson-family.92915.jpeg">
         <h4>Quais são as emoções apresentadas em Divertidamente?</h4>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
     </div>
     <div class="alternativas" id="p6-alternativas">
         <button id="p6a" onclick="perguntas('6', 'c', 'a')" class="errado">
@@ -258,7 +278,10 @@
     <div class="cabecalho">
         <h3>Pergunta 07</h3>
         <img class="menorh" src="./images/detona-ralph.jpg">
-        <h4>No filme Detona Ralph, Venelope não pode sair do jogo Corrida Doce pois ela é um...        </h4>
+        <h4>No filme Detona Ralph, Venelope não pode sair do jogo Corrida Doce pois ela é um... </h4>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
     </div>
     <div class="alternativas" id="p7-alternativas">
         <button id="p7a" onclick="perguntas('7', 'd', 'a')"class="errado">
@@ -296,6 +319,9 @@
         <h3>Pergunta 08</h3>
         <img class="menorh" src="./images/carros2.jpg">
         <h4>Em Carros 2, em quais cidades foi realizada o Grand Prix Mundial?</h4>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
     </div>
     <div class="alternativas" id="p8-alternativas">
         <button id="p8a" onclick="perguntas('8', 'a', 'a')" class="certo">
@@ -333,6 +359,9 @@
         <h3>Pergunta 09</h3>
         <img src="./images/walle.jfif">
         <h4>Em Walle, o que continha no recipiente em que os personagens principais estavam carregando durante o filme?</h4>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
     </div>
     <div class="alternativas" id="p9-alternativas">
         <button id="p9a" onclick="perguntas('9', 'c', 'a')" class="errado">
@@ -370,6 +399,9 @@
         <h3>Pergunta 10</h3>
         <img src="./images/up.jpg">
         <h4>Em Up Altas Aventuras, o lugar Paraíso das Cachoeiras fica situado em qual país?</h4>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
     </div>
     <div class="alternativas" id="p10-alternativas">
         <button id="p10a" onclick="perguntas('10', 'd', 'a')" class="errado">
